# rust-serialization-guide

./: Cargo.toml
src/: custom_serializer.rs  json_examples.rs  lib.rs  main.rs  models.rs
